change brand name

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "ChatLabs",
-  "name": "ChatLabs",
+  "short_name": "ImogenAI",
+  "name": "ImogenAI",
   "icons": [
     {
       "src": "/icon-192x192.png",
