-change lite plane and pro plan daily limit to monthly -add counting monthly -add cache for anothropic models in openrouter route -add subscriptionStartDate in stripe,supabase and for counting date -chat message counting changes -add usage in below subs in profile setting -add X-AI icon and nividia icon (SVG) -add new models in openrouter - Create assistant > Remove the prompt modification logic -chat-ui > improve drag text -Block free user to use splitview -changed Brand fonts -added new file charttooltipContent, ChartTooltip, Dashboardpage, UsageChart -Add lite plan

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "ImogenAI",
-  "name": "ImogenAI",
+  "short_name": "Imogen",
+  "name": "Imogen",
   "icons": [
     {
       "src": "/icon-192x192.png",
