--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "ai": "^2.2.37",
     "axios": "^1.6.7",
     "canvas-confetti": "^1.9.3",
+    "chart": "^0.1.2",
     "class-variance-authority": "^0.7.0",
     "cmdk": "^0.2.0",
     "cohere-ai": "^7.13.1",
@@ -131,12 +132,14 @@
     "react": "^18",
     "react-day-picker": "^8.9.1",
     "react-dom": "^18",
+    "react-error-boundary": "^4.1.1",
     "react-hook-form": "^7.48.2",
     "react-i18next": "^15.0.1",
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-textarea-autosize": "^8.5.3",
+    "recharts": "^2.13.0",
     "rehype-katex": "^7.0.0",
     "rehype-mathjax": "^6.0.0",
     "remark-gfm": "^4.0.0",
