--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.5.2",
     "i18next-resources-to-backend": "^1.2.0",
+    "jose": "^5.9.6",
     "langchain": "^0.0.213",
     "ldrs": "^1.0.2",
     "lucide-react": "^0.292.0",
