--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,6 +3,7 @@ compatibility_date = "2024-01-01"
 
 [build]
 command = "npm run build"
+main = "index.ts"
 
 [env.production]
 NEXT_PUBLIC_SUPABASE_URL = ""
