--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,3 @@
-name = "chatlabs"
-compatibility_date = "2024-01-01"
-
 [build]
 command = "npm run build"
 main = "index.ts"
@@ -19,3 +16,9 @@ custom_domain = true
 
 [build.upload]
 format = "service-worker"
+
+main = ".worker-next/index.mjs"
+name = "imogenai"
+compatibility_date = "2024-01-01"
+compatibility_flags = ["nodejs_compat"]
+experimental_assets = { directory = ".worker-next/assets", binding = "ASSETS" }
