--- a/package.json
+++ b/package.json
@@ -144,6 +144,7 @@
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-textarea-autosize": "^8.5.3",
+    "react-toastify": "^10.0.6",
     "recharts": "^2.13.0",
     "rehype-katex": "^7.0.0",
     "rehype-mathjax": "^6.0.0",
