--- a/package.json
+++ b/package.json
@@ -153,6 +153,7 @@
     "replicate": "^0.32.0",
     "sonner": "^1.3.1",
     "stripe": "^14.15.0",
+    "together-ai": "^0.8.0",
     "uuid": "^9.0.1",
     "virtua": "^0.33.2",
     "xmldom": "^0.6.0",
