--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-hover-card": "^1.0.7",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-navigation-menu": "^1.1.4",
@@ -109,6 +110,7 @@
     "fast-jwt": "^4.0.2",
     "focus-trap-react": "^10.2.3",
     "framer-motion": "^11.5.4",
+    "googleapis": "^126.0.1",
     "gpt-tokenizer": "^2.1.2",
     "groq": "^3.43.0",
     "groq-sdk": "^0.3.3",
@@ -142,6 +144,7 @@
     "react-i18next": "^15.0.1",
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
+    "react-resizable-panels": "^2.1.7",
     "react-syntax-highlighter": "^15.5.0",
     "react-textarea-autosize": "^8.5.3",
     "react-toastify": "^10.0.6",
