--- a/package.json
+++ b/package.json
@@ -170,6 +170,7 @@
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
     "@types/canvas-confetti": "^1.6.4",
+    "@types/he": "^1.2.3",
     "@types/jest": "^29.5.11",
     "@types/js-yaml": "^4.0.9",
     "@types/lodash": "^4.17.9",
