--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "@xenova/transformers": "^2.13.4",
     "ai": "^2.2.37",
     "axios": "^1.7.7",
+    "buffer": "^6.0.3",
     "canvas-confetti": "^1.9.3",
     "chart": "^0.1.2",
     "class-variance-authority": "^0.7.0",
@@ -135,6 +136,7 @@
     "pdf-parse": "^1.1.1",
     "pino": "^9.4.0",
     "pino-pretty": "^11.2.2",
+    "protobufjs": "^7.4.0",
     "re-resizable": "^6.9.17",
     "react": "^18",
     "react-day-picker": "^8.9.1",
