--- a/package.json
+++ b/package.json
@@ -141,12 +141,14 @@
     "react": "^18",
     "react-day-picker": "^8.9.1",
     "react-dom": "^18",
+    "react-dropzone": "^14.3.5",
     "react-error-boundary": "^4.1.1",
     "react-hook-form": "^7.48.2",
     "react-i18next": "^15.0.1",
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.1.7",
+    "react-sketch-canvas": "^6.2.0",
     "react-syntax-highlighter": "^15.5.0",
     "react-textarea-autosize": "^8.5.3",
     "react-toastify": "^10.0.6",
