--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "@supabase/ssr": "^0.0.10",
     "@supabase/supabase-js": "^2.38.4",
     "@tabler/icons-react": "^2.47.0",
+    "@tanstack/react-query": "^5.62.3",
     "@uiw/codemirror-theme-vscode": "^4.23.2",
     "@uiw/react-codemirror": "^4.23.1",
     "@upstash/ratelimit": "^1.1.3",
@@ -146,6 +147,7 @@
     "react-hook-form": "^7.48.2",
     "react-i18next": "^15.0.1",
     "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.13.1",
     "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.1.7",
     "react-sketch-canvas": "^6.2.0",
