Enhance AI Assistant Extension with OpenRouter Support and Improved Features
- Updated the chat API to support multiple providers, including OpenAI and OpenRouter, allowing for more flexible AI interactions.
- Refactored the background script to handle complex tasks with a new task loop, improving the assistant's ability to execute commands and manage user interactions.
- Enhanced the content script to extract detailed page information, including clickable elements, improving the assistant's context awareness.
- Updated the UI to include a model selector for choosing different AI models, enhancing user customization.
- Improved error handling and response formatting for better user feedback during interactions.
- Added new features for computer control, including actions like clicking elements, taking screenshots, and navigating URLs, expanding the assistant's capabilities.
- Enhanced styling and layout for a more user-friendly experience across the extension's UI components.

--- a/chatbot-ui-extension/manifest.json
+++ b/chatbot-ui-extension/manifest.json
@@ -1,18 +1,28 @@
 {
     "manifest_version": 3,
-    "name": "Agent UI Extension",
+    "name": "AI Assistant",
     "version": "1.0",
-    "description": "Chrome extension for interacting with the Cursor AI agent",
+    "description": "AI Assistant for web automation and research",
     "permissions": [
         "activeTab",
         "scripting",
-        "storage",
         "tabs",
-        "cookies"
+        "desktopCapture"
     ],
     "host_permissions": [
-        "http://localhost:3000/*"
+        "http://localhost:3000/*",
+        "https://*.perplexity.ai/*",
+        "https://*.google.com/*",
+        "<all_urls>"
     ],
+    "externally_connectable": {
+        "matches": [
+            "http://localhost:3000/*"
+        ]
+    },
+    "content_security_policy": {
+        "extension_pages": "script-src 'self'; object-src 'self'; connect-src 'self' http://localhost:3000 https://*.perplexity.ai https://*.google.com https://docs.googleapis.com"
+    },
     "action": {
         "default_popup": "popup.html",
         "default_icon": {
@@ -20,7 +30,8 @@
         }
     },
     "background": {
-        "service_worker": "background.js"
+        "service_worker": "background.js",
+        "type": "module"
     },
     "content_scripts": [
         {
