--- a/chatbot-ui-extension/manifest.json
+++ b/chatbot-ui-extension/manifest.json
@@ -1,13 +1,14 @@
 {
     "manifest_version": 3,
-    "name": "AI Assistant",
+    "name": "AI Research Assistant",
     "version": "1.0",
-    "description": "AI Assistant for web automation and research",
+    "description": "AI-powered research assistant that helps gather and organize information",
     "permissions": [
         "activeTab",
         "scripting",
         "tabs",
-        "desktopCapture"
+        "storage",
+        "sidePanel"
     ],
     "host_permissions": [
         "http://localhost:3000/*",
@@ -15,13 +16,8 @@
         "https://*.google.com/*",
         "<all_urls>"
     ],
-    "externally_connectable": {
-        "matches": [
-            "http://localhost:3000/*"
-        ]
-    },
-    "content_security_policy": {
-        "extension_pages": "script-src 'self'; object-src 'self'; connect-src 'self' http://localhost:3000 https://*.perplexity.ai https://*.google.com https://docs.googleapis.com"
+    "background": {
+        "service_worker": "background.js"
     },
     "action": {
         "default_popup": "popup.html",
@@ -29,9 +25,24 @@
             "48": "icons/icon48.png"
         }
     },
-    "background": {
-        "service_worker": "background.js",
-        "type": "module"
+    "side_panel": {
+        "default_path": "sidebar.html"
+    },
+    "commands": {
+        "_execute_action": {
+            "suggested_key": {
+                "default": "Ctrl+Shift+Y",
+                "mac": "Command+Shift+Y"
+            },
+            "description": "Toggle AI Assistant"
+        },
+        "toggle_sidebar": {
+            "suggested_key": {
+                "default": "Ctrl+Shift+S",
+                "mac": "Command+Shift+S"
+            },
+            "description": "Toggle Sidebar"
+        }
     },
     "content_scripts": [
         {
@@ -39,6 +50,13 @@
             "js": ["content.js"]
         }
     ],
+    "web_accessible_resources": [{
+        "resources": ["sidebar.js"],
+        "matches": ["<all_urls>"]
+    }],
+    "content_security_policy": {
+        "extension_pages": "script-src 'self'; object-src 'self'"
+    },
     "icons": {
         "48": "icons/icon48.png"
     }
