--- a/chatbot-ui-extension/manifest.json
+++ b/chatbot-ui-extension/manifest.json
@@ -1,62 +1,39 @@
 {
     "manifest_version": 3,
-    "name": "AI Research Assistant",
+    "name": "Chatbot UI Extension",
+    "description": "Runs actions on web pages and captures screenshots",
     "version": "1.0",
-    "description": "AI-powered research assistant that helps gather and organize information",
     "permissions": [
+        "sidePanel",
         "activeTab",
-        "scripting",
+        "contextMenus",
         "tabs",
+        "scripting",
         "storage",
-        "sidePanel"
+        "webNavigation",
+        "clipboardRead",
+        "clipboardWrite"
     ],
     "host_permissions": [
-        "http://localhost:3000/*",
-        "https://*.perplexity.ai/*",
-        "https://*.google.com/*",
         "<all_urls>"
     ],
     "background": {
-        "service_worker": "background.js"
-    },
-    "action": {
-        "default_popup": "popup.html",
-        "default_icon": {
-            "48": "icons/icon48.png"
-        }
-    },
-    "side_panel": {
-        "default_path": "sidebar.html"
-    },
-    "commands": {
-        "_execute_action": {
-            "suggested_key": {
-                "default": "Ctrl+Shift+Y",
-                "mac": "Command+Shift+Y"
-            },
-            "description": "Toggle AI Assistant"
-        },
-        "toggle_sidebar": {
-            "suggested_key": {
-                "default": "Ctrl+Shift+S",
-                "mac": "Command+Shift+S"
-            },
-            "description": "Toggle Sidebar"
-        }
+        "service_worker": "background.js",
+        "type": "module"
     },
     "content_scripts": [
         {
             "matches": ["<all_urls>"],
-            "js": ["content.js"]
+            "js": ["content.js"],
+            "run_at": "document_idle"
         }
     ],
-    "web_accessible_resources": [{
-        "resources": ["sidebar.js"],
-        "matches": ["<all_urls>"]
-    }],
-    "content_security_policy": {
-        "extension_pages": "script-src 'self'; object-src 'self'"
+    "side_panel": {
+        "default_path": "sidebar.html"
     },
+    "action": {
+        "default_title": "AI Computer Control"
+    },    
     "icons": {
         "48": "icons/icon48.png"
     }
