--- a/package.json
+++ b/package.json
@@ -87,8 +87,8 @@
     "@supabase/ssr": "^0.0.10",
     "@supabase/supabase-js": "^2.38.4",
     "@tabler/icons-react": "^2.47.0",
-    "@tldraw/tldraw": "^3.6.0",
     "@tanstack/react-query": "^5.62.3",
+    "@tldraw/tldraw": "^3.6.0",
     "@uiw/codemirror-theme-vscode": "^4.23.2",
     "@uiw/react-codemirror": "^4.23.1",
     "@upstash/ratelimit": "^1.1.3",
@@ -168,6 +168,7 @@
     "uuid": "^9.0.1",
     "virtua": "^0.33.2",
     "xmldom": "^0.6.0",
+    "yahoo-finance2": "^2.13.3",
     "youtube-captions-scraper": "^2.0.3",
     "zod": "^3.22.4"
   },
