--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -16,16 +16,15 @@ max_rows = 1000
 
 [db]
 # Port to use for the local database URL.
-port = 54322
+port = 5432
 # Port used by db diff command to initialise the shadow database.
 shadow_port = 54320
-# The database major version to use. This has to be the same as your remote database's. Run `SHOW
-# server_version;` on the remote database to check.
+# The database major version to use. This has to be the same as your remote database's.
 major_version = 15
 
 [db.pooler]
-enabled = false
-port = 54329
+enabled = true
+port = 6543
 pool_mode = "transaction"
 default_pool_size = 20
 max_client_conn = 100
