--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "build:worker": "cloudflare",
     "dev:worker": "wrangler dev --port 8771",
     "preview:worker": "npm run build:worker && npm run dev:worker",
-    "deploy:worker": "npm run build:worker && wrangler deploy"
+    "deploy:worker": "npm run build:worker && wrangler deploy",
+    "test:yahoo": "node --experimental-vm-modules --experimental-specifier-resolution=node --loader ts-node/esm test-yahoo-finance.ts"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^0.0.51",
@@ -192,6 +193,7 @@
     "@types/xmldom": "^0.1.34",
     "autoprefixer": "^10.4.16",
     "clsx": "^2.0.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8",
     "eslint-config-next": "^14.0.2",
     "eslint-config-prettier": "^9.1.0",
@@ -208,6 +210,7 @@
     "tailwindcss": "^3.3.5",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.6.2"
   }
 }
